# deakin_rover

./: .gitignore  README.md  errors.txt  fixed_errors
.devcontainer/base_station/: Dockerfile  devcontainer.json
.devcontainer/rover/: Dockerfile  devcontainer.json
.devcontainer/rpi/: Dockerfile  devcontainer.json
base_station_ws/gui/: package-lock.json
base_station_ws/gui/src/app/: page.js
base_station_ws/gui/src/components/camera/: CameraFeedPanel.jsx  CameraStream.jsx  MultiCameraViewer.jsx
base_station_ws/gui/src/components/common/: GlowCard.jsx
base_station_ws/gui/src/components/control/: NodeLauncher.jsx  ROSNodeController.jsx
base_station_ws/gui/src/components/layout/: Header.jsx  MainLayout.jsx
base_station_ws/gui/src/context/: ROSContext.jsx
base_station_ws/gui/src/hooks/: useCameraStream.js
base_station_ws/gui/src/lib/utils/: constants.js
base_station_ws/misbah_arm_temp/src/arm_bringup/: CMakeLists.txt  package.xml
base_station_ws/misbah_arm_temp/src/arm_bringup/launch/: arm_real.launch.py
base_station_ws/misbah_arm_temp/src/arm_description/: CMakeLists.txt  package.xml
base_station_ws/misbah_arm_temp/src/arm_description/urdf/: arm.urdf
base_station_ws/misbah_arm_temp/src/arm_moveit_config/: .setup_assistant  package.xml
base_station_ws/misbah_arm_temp/src/arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover_arm.ros2_control.xacro  rover_arm.srdf  rover_arm.urdf.xacro
base_station_ws/misbah_arm_temp/src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware_plugin.xml  package.xml
base_station_ws/misbah_arm_temp/src/my_robot_hardware/include/my_robot_hardware/: arm_can_driver.hpp  arm_hardware_interface.hpp
base_station_ws/misbah_arm_temp/src/my_robot_hardware/src/: arm_can_driver.cpp  arm_hardware_interface.cpp
rover_ws/: start.sh
rover_ws/src/rover_bringup/: package.xml
rover_ws/src/rover_bringup/launch/: infrastructure.launch.py
rover_ws/src/rover_description/launch/: description.launch.py
rover_ws/src/rover_description/urdf/: rover.urdf.xacro
rpi_ws/: implementation.md  start.sh
rpi_ws/src/motor_node/: package.xml  setup.py
rpi_ws/src/motor_node/motor_node/: controller.py  iksolve.py
rpi_ws/src/rover_bringup/: package.xml  setup.py
rpi_ws/src/rover_bringup/config/: camera_config.yaml  ros2_controllers.yaml
rpi_ws/src/rover_bringup/launch/: arm.launch.py  arm.launch.xml  control.launch.py  control.launch.xml  hardware.launch.py  infrastructure.launch.xml  monitoring.launch.py  monitoring.launch.xml  rover.launch.py  rover.launch.xml
rpi_ws/src/rover_camera/rover_camera/: camera_node.py
rpi_ws/src/rover_description/launch/: description.launch.py
rpi_ws/src/rover_description/urdf/: rover.urdf.xacro
rpi_ws/src/rover_drive_hardware/: CMakeLists.txt  package.xml  rover_drive_hardware.xml
rpi_ws/src/rover_drive_hardware/include/rover_drive_hardware/: rover_drive_hardware.hpp
rpi_ws/src/rover_drive_hardware/src/: rover_drive_hardware.cpp
rpi_ws/src/rover_joy/rover_joy/: joy_teleop_node.py
