<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_drive_hardware</name>
  <version>0.1.0</version>
  <description>
    ros2_control hardware interface plugin for Deakin Rover BLD-3055 drive motors
    via RS485 Modbus RTU. Supports mock mode for development without hardware.
  </description>
  <maintainer email="rover@deakin.edu.au">Deakin Rover Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <build_depend>libmodbus-dev</build_depend>
  <exec_depend>libmodbus-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/rover_drive_hardware.xml"/>
  </export>
</package>
